prevent layout change when scrollbar appears

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -45,6 +45,11 @@ body {
 	line-height: 1.5;
 }
 
+html,
+body {
+	scrollbar-gutter: stable both-edges;
+}
+
 @media (prefers-reduced-motion: no-preference) {
 	body,
 	html {
